<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NameChooseActivity">

    <TextView
        android:id="@+id/tv_player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/name_for_player_1_text"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_player1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/player1_et"
        android:hint="@string/player_1_name_hint"
        app:layout_constraintBottom_toBottomOf="@+id/tv_player1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_player1"
        app:layout_constraintTop_toTopOf="@+id/tv_player1"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tv_player2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/name_for_player_2_text"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/tv_player1"
        app:layout_constraintTop_toBottomOf="@id/tv_player1" />

    <EditText
        android:id="@+id/et_player2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/player2_et"
        android:hint="@string/player_2_name_hint"
        app:layout_constraintBottom_toBottomOf="@+id/tv_player2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_player2"
        app:layout_constraintTop_toTopOf="@+id/tv_player2"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_start_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:background="#FFFFFF"
        android:onClick="startGame"
        android:text="@string/start_game_btn"
        app:backgroundTint="@color/buttons_color"
        app:layout_constraintEnd_toEndOf="@+id/et_player1"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="@+id/tv_player1"
        app:layout_constraintTop_toBottomOf="@+id/tv_player2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>
</androidx.constraintlayout.widget.ConstraintLayout>